# CAE_AI_LAB

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REDESIGN.md  ROADMAP.md  index.html  package-lock.json  package.json  plan.md  test_calculix.inp  tsconfig.json  vite.config.ts
.github/workflows/: caelab-ci.yml
.trae/documents/: ui_completion_plan.md  v23_detailed_implementation_plan.md  v23_implementation_plan.md
development/: 启动报告.md  工程师任务书.md  目录结构.md
docs/: LEARNING_ROADMAP.md  PLUGIN_SDK.md  PRD_CAELab.md  UI设计方案.md  USER_MANUAL.md  backend_prompt.md  bc_api.md  trae_ui_tasks_prompt.md  功能原型说明.md  核心需求与产品定位.md  网格生成模块开发文档.md  需求文档.md
docs/development/: 开发计划.md  技术架构选型.md
harmony/: README.md
public/: sw.js
python/: pyproject.toml
python/caelab/: __init__.py  _client.py  material.py  mesh.py  project.py  result.py  simulation.py
python/examples/: 01_quick_start.py  02_cantilever_beam.py  03_material_comparison.py  04_parametric_study.py  05_mesh_convergence.py  06_modal_analysis.py  07_thermal_analysis.py  08_buckling_analysis.py  09_batch_processing.py  10_result_visualization.py  11_topology_optimization.py  12_contact_analysis.py  13_custom_material.py  14_export_report.py  15_project_management.py  16_python_loop.py  17_data_extraction.py  18_jupyter_integration.py  19_advanced_parametric.py  20_automation_workflow.py
scripts/: cfd_solver.py
src/: App.vue  main.ts  router.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/docs/: PHASE1_API.md
src-tauri/src/: high_throughput.rs  lib.rs  main.rs
src-tauri/src/api_server/: docs.rs  handlers.rs  middleware.rs  mod.rs  routes.rs
src-tauri/src/commands/: adaptive_precision.rs  ai.rs  ai_recommend.rs  atom_builder.rs  audit_log.rs  auth.rs  benchmark.rs  biomechanics.rs  cae_api.rs  calculix_job.rs  cfd.rs  coarse_graining.rs  code_exec.rs  collaboration.rs  contact.rs  coordinate_mapping.rs  coupling.rs  cross_scale_viz.rs  data_transfer.rs  dft_bridge.rs  dft_input.rs  dft_postprocess.rs  dft_task.rs  electronics.rs  error_tracking.rs  explicit_dynamics.rs  fatigue.rs  file.rs  fsi.rs  geometry_repair.rs  input_gen.rs  materials.rs  md_postprocess.rs  mesh_refinement.rs  mod.rs  modal.rs  molecular_dynamics.rs  multiscale_integration.rs  multiscale_workspace.rs  nightly_ci.rs  (+26 more)
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/plugin/: api.rs  interface.rs  manager.rs  mod.rs
src-tauri/src/solver/: bc.rs  mesh.rs  mod.rs
src-tauri/tests/: cantilever_beam_test.rs
src/api/: acoustic.ts  adaptivePrecision.ts  advancedMaterial.ts  advancedMesh.ts  aiRecommend.ts  atomBuilder.ts  auditLog.ts  auth.ts  benchmark.ts  biomechanics.ts  cae.ts  cellularStructure.ts  certification.ts  cloud-simulation.ts  cloudHpc.ts  coarseGraining.ts  cohesive.ts  collaboration.ts  composite.ts  coordinateMapping.ts  creep.ts  crossScaleViz.ts  dataAsset.ts  dataTransfer.ts  dftBridge.ts  dftInput.ts  dftPostProcess.ts  dftTask.ts  electronics.ts  errorTracking.ts  explicit_dynamics.ts  fatigue.ts  fsi.ts  geometryRepair.ts  highThroughput.ts  homogenization.ts  hpcCluster.ts  index.ts  mdPostProcess.ts  meshRefinement.ts  (+31 more)
src/composables/: useAutoSave.ts  useCodeEditor.ts  useConfirm.ts  useContextMenu.ts  useHotkeys.ts  useMobileFeatures.ts  useOfflineMode.ts  useOrientation.ts  usePlatform.ts  useSpeechRecognition.ts  useUndo.ts
src/locales/: ar-SA.ts  de-DE.ts  en-US.ts  es-ES.ts  fr-FR.ts  index.ts  ja-JP.ts  ko-KR.ts  zh-CN.ts
src/stores/: ai.ts  authStore.ts  automation.ts  parametric.ts  project.ts  solverStore.ts  trial.ts  undo.ts
src/styles/: main.css
src/types/: index.ts
src/utils/: csg.ts  defaultHotkeys.ts  diff.ts  harmonyPolyfill.ts  helpDocs.ts  meshPerformance.ts  meshStreaming.ts  moduleGuides.ts  (+4 more)
(+164 files in other folders)
