[package]
name = "caelab"
version = "0.1.0"
description = "科研与工程创作一体化工作台"
authors = ["CAELab Team"]
edition = "2021"

[build-dependencies]
tauri-build = "1.0"

[dependencies]
tauri = { version = "=1.0.0-beta.20", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
